# Archiflow

./: .env  .env.example  .gitignore  ARCHIFLOW_CLIENT_MODULE_ANALYSIS.md  ARCHIFLOW_PROJECT_ANALYSIS.md  ARCHITECTURE_COMPLETE.md  ArchiFlow_Application.pro  CMakeLists.txt  CMakePresets.json  CONTRACT_CRUD_ENHANCED.md  CONTRACT_MANAGEMENT_ANALYSIS.md  CRUD_IMPLEMENTATION_STATUS.md  EMPLOYEE_MANAGER_FEATURE_ANALYSIS.md  EmployeeManagerLite.pro  EmployeeManagerLite.pro.user.0653b32  GestionDesProjets.pro  INTEGRATION_COMPLETE.md  INTERFACE_ARCHITECTURE.md  InvoiceApp  InvoiceApp_Feature_Analysis.md  MATERIALS_MANAGEMENT_SPECIFICATION.md  Materials.pro  QRangeSlider.cpp  QRangeSlider.h  README.md  SETUP.md  SUPPLIER_INTEGRATION.md  archiflow.files  archiflow.includes  build_log.txt  build_log_new.txt  build_output.txt  build_output_detailed.txt  build_test.sh  chatbotdialog.cpp  chatbotdialog.h  chatbotmanager.cpp  chatbotmanager.h  chatwindow.cpp  chatwindow.h  (+38 more)
database/: databasemanager.cpp  databasemanager.h
forms/: mainwindow.ui  searchfilter.ui
include/: Arduino.h  durationestimator.h  mainwindow.h  maplocation.h  projet.h  projetdialog.h  projetmanager.h  searchfilter.h
resources/: resources.qrc
resources/styles/: blue_theme.qss  main.qss  main_simple.qss
src/: Arduino.cpp  durationestimator.cpp  main.cpp  mainwindow.cpp  maplocation.cpp  maplocation.ui  projet.cpp  projetdialog.cpp  projetdialog.ui  projetmanager.cpp  searchfilter.cpp
src/core/: application.cpp  application.h  modulemanager.cpp  modulemanager.h
src/database/: databasemanager.cpp  databasemanager.h  databaseservice.cpp  databaseservice.h  migrations.cpp  migrations.h
src/features/clients/: client.cpp  client.h  clientaiassistant.cpp  clientaiassistant.h  clientdatabasemanager.cpp  clientdatabasemanager.h  clientdialog.cpp  clientdialog.h  clientsmodule.cpp  clientsmodule.h  clientwidget.cpp  clientwidget.h
src/features/contracts/: contract.cpp  contract.h  contractaiassistantdialog.cpp  contractaiassistantdialog.h  contractchatbotdialog.cpp  contractchatbotdialog.h  contractdatabasemanager.cpp  contractdatabasemanager.h  contractdialog.cpp  contractdialog.h  contractexportmanager.cpp  contractexportmanager.h  contractimportdialog.cpp  contractimportdialog.h  contractmodule.cpp  contractmodule.h  contractstatisticswidget.cpp  contractstatisticswidget.h  contractwidget.cpp  contractwidget.h  contractwidget_backup.cpp  groqcontractchatbot.cpp  groqcontractchatbot.h
src/features/employees/: employee.cpp  employee.h  employeedatabasemanager.cpp  employeedatabasemanager.h  employeedialog.cpp  employeedialog.h  employeesmodule.cpp  employeesmodule.h  employeewidget.cpp  employeewidget.h
src/features/invoices/: client.cpp  client.h  clientdialog.cpp  clientdialog.h  invoice.cpp  invoice.h  invoiceaiassistantdialog.cpp  invoiceaiassistantdialog.h  invoicedatabasemanager.cpp  invoicedatabasemanager.h  invoicedialog.cpp  invoicedialog.h  invoiceitem.cpp  invoiceitem.h  invoicepdfgenerator.cpp  invoicepdfgenerator.h  invoicesmodule.cpp  invoicesmodule.h  invoicewidget.cpp  invoicewidget.h
src/features/materials/: aiassistantdialog.cpp  aiassistantdialog.h  aipredictiondialog.cpp  aipredictiondialog.h  groqclient.cpp  groqclient.h  materialdetailsdialog.cpp  materialdetailsdialog.h  materialdialog.cpp  materialdialog.h  materialmodel.cpp  materialmodel.h  materialsmodule.cpp  materialsmodule.h  materialwidget.cpp  materialwidget.h  supplierdialog.cpp  supplierdialog.h  suppliermodel.cpp  suppliermodel.h  supplierwidget.cpp  supplierwidget.h
src/features/projects/: projectmodule.cpp  projectmodule.h  projet.cpp  projet.h  projetmanager.cpp  projetmanager.h
src/interfaces/: icontractchatbot.h  icontractdialog.h  icontractexporter.h  icontractimporter.h  icontractservice.h  icontractwidget.h  idatabasemanager.h  imoduleinterface.h  interfaces.h
src/ui/: basedialog.cpp  basedialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  sidebar.cpp  sidebar.h
src/ui/projects/: projetdialog.cpp  projetdialog.h  projetdialog.ui  projetwidget.cpp  projetwidget.h
src/utils/: animationmanager.cpp  animationmanager.h  documentprocessor.cpp  documentprocessor.h  environmentloader.cpp  environmentloader.h  mapboxhandler.cpp  mapboxhandler.h  stylemanager.cpp  stylemanager.h
tests/: test_databasemanager.cpp
utils/: style.qss
